created function for love calculator

--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     </div>
 
     <div id="result"></div>
+
+    <section>
+      <h2>Love Calculator</h2>
+
+      <label for="name1">Enter your name:</label>
+      <input type="text" id="name1" placeholder="Your name" /><br />
+      <label for="name2">Enter paartner's name:</label>
+      <input type="text" id="name2" placeholder="Partner's name" /><br />
+      <button onclick="calculateLove()" class="love-btn">Calculate Love</button>
+
+      <div id="result2"></div>
+    </section>
   </body>
   <script src="./script.js"></script>
 </html>
